--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"o
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/app_name"
             android:textColor="@color/white"
