get goroscope, en sealedclass

--- a/app/src/main/res/layout/activity_horoscope_detail.xml
+++ b/app/src/main/res/layout/activity_horoscope_detail.xml
@@ -10,6 +10,7 @@
         android:id="@+id/ivDetail"
         android:layout_width="0dp"
         android:layout_height="300dp"
+        android:contentDescription="@string/all_img_des"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,6 +33,7 @@
         android:layout_height="0dp"
         android:layout_margin="24dp"
         android:gravity="center"
+        android:fontFamily="@font/dancing_script"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
+        android:contentDescription="@string/all_img_des"
         android:padding="8dp"
         android:src="@drawable/round_arrow_back_ios_24"
         app:layout_constraintStart_toStartOf="parent"
