--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="statusBar">#974747</color>
+
+    <color name="black_alpha">#98000000</color>
+
+    <color name="red">#FF0000</color>
 </resources>
